# aria

./: Cargo.toml  Makefile  README.md  SPEC.md
.aria/: AGENT.md  config.toml  index.json
docs/: README.md
src/: config.rs  embedder.rs  embeddings.rs  externals.rs  index.rs  main.rs  parser.rs  resolver.rs  summarizer.rs  topo.rs
src/commands/: callstack.rs  config.rs  diff.rs  embed.rs  hooks.rs  index.rs  init.rs  mod.rs  query.rs  search.rs  source.rs  stats.rs  topo.rs  update.rs  validate.rs
