[package]
name = "aria"
version = "0.1.0"
edition = "2024"
description = "Git-native codebase indexer for LLMs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tree-sitter = "0.25"
tree-sitter-go = "0.25"
walkdir = "2"
